# autoagent

./: README.md  pyproject.toml  setup.py
artifacts/benchmark/howto-v1/: benchmark.yaml
artifacts/benchmark/v1/: benchmark.yaml
artifacts/calibrate/receipts/calibrate/: api_build_url.json  api_fetch_timeout.json  api_post_json.json  cli_dispatch_case.json  cli_missing_name.json  cli_sum_args.json  cli_upper_stdin.json  config_enabled_services.json  config_mode_none.json  config_port_strip.json  file_count_nonempty.json  file_read_records.json  file_write_report.json  parser_bool_tokens.json  parser_csv_blanks.json  (+11 more)
artifacts/runs/beautify/: holdout_summary.json  report.md  run.sqlite3
artifacts/runs/demo/: report.md  run.sqlite3
artifacts/runs/demo2/: holdout_summary.json  report.md  run.sqlite3
artifacts/runs/howto-code/: install_fixture.py
examples/: agent.builtin.yaml  agent.code.yaml  agent.dataset.yaml  agent.local.yaml  agent.miniswe.yaml  dataset.demo.yaml
examples/datasets/: demo.jsonl
superagent/: __init__.py  __main__.py  audit.py  benchmark.py  benchmark_definitions.py  boundary.py  cli.py  config.py  models.py  mutator.py  optimizer.py  providers.py  report.py  runner.py  session.py  storage.py  utils.py
superagent/adapters/: __init__.py  _coding.py  builtin.py  mini_swe_agent.py  simple_coder.py
superagent/evals/: __init__.py  base.py  code_benchmark.py  dataset.py
superagent/prompts/: program.md
tests/: helpers.py  test_backends.py  test_benchmark.py  test_config.py  test_contracts.py  test_optimizer.py  test_session.py
(+525 files in other folders)
