[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superagent"
version = "0.1.0"
description = "A deterministic BYO agent repo optimization harness."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
superagent = "superagent.cli:main"

[tool.setuptools.packages.find]
include = ["superagent*"]
